# rnn2d

./: .gitignore  CMakeLists.txt  README.md  activation.h  cuda_utils.h  lstm2d_ref.py  lstm_common.h  lstm_common_test.h  lstm_cpu.cc  lstm_cpu.h  lstm_cpu_kernels.h  lstm_cpu_test.cc  lstm_gpu.cu  lstm_gpu.h  lstm_gpu_kernels.cu  lstm_gpu_kernels.h  lstm_gpu_test.cu  lstm_helper.h  math_cpu.cc  math_cpu.h  math_gpu.cu  math_gpu.h  tile.inc.h  tile_cpu.cc  tile_cpu.h  tile_cpu_test.cc  tile_gpu.cu  tile_gpu.h  tile_gpu_test.cu  tile_xxx.h  utils.h
bench/: CMakeLists.txt  gpu_prof.cu  lstm_common_benchmark.h  lstm_cpu_benchmark.cc  lstm_gpu_benchmark.cu  tile_common_benchmark.h  tile_cpu_benchmark.cc  tile_gpu_benchmark.cu
cmake/: FindBLAS.cmake  FindGBenchmark.cmake  FindGlog.cmake  FindTorch.cmake
include/: rnn2d.h
include/internal/: Lstm.h  LstmInference.h  LstmTraining.h  common.h  lstm.h  lstm_inference.h  lstm_standard.h  lstm_training.h
include/internal/cpu/: lstm.h  lstm_inference_low_mem_cpu_impl.h  math.h
include/rnn2d/: CMakeLists.txt  activation.h  activations.h  basic_types.h  common.h  cuda_utils.h  defines.h  layer.h  lstm.h  lstm_common.h  lstm_cpu.h  lstm_gpu.h  lstm_impl.h  lstm_stable_cpu.h  lstm_stable_gpu.h  math_gpu.h  rnn.h  rnn2d.h  tile_cpu.h  tile_gpu.h  tile_impl.h
include/rnn2d/internal/: activation.h  common.h  lstm2d_inference_high_mem_impl.h  lstm2d_training_high_mem_impl.h  rnn2d_inference_impl.h
include/rnn2d/internal/cpu/: lstm2d_cell.h  lstm2d_cell_halved.h  lstm2d_cell_standard.h  lstm2d_inference_high_mem_impl.h  lstm_aachen_cell.h  lstm_inference_impl.h  lstm_inference_low_mem_impl.h  math.h  rnn2d_inference_standard_impl.h  rnn2d_simple_cell.h
include/rnn2d/internal/gpu/: lstm2d_inference_high_mem_impl.h  math.h
ref_impl/: MultiDirectionalTwoDLSTMOp.py  README  Util.py  c_support_code_mdlstm.cpp  demo_tiny_ctc.py  demo_word_ctc.py  lstm.py  returnn.py  test.py
src/: CMakeLists.txt  blockify_cpu.cc  lstm.cc  lstm_cpu.cc  lstm_gpu.cu  lstm_stable_cpu.cc  math_cpu.cc  math_cpu.h  rnn2d.cc  tile_cpu.cc  tile_gpu.cu
test/: CMakeLists.txt  LstmAllocator.h  LstmAllocatorCPU.h  LstmAllocatorGPU.h  LstmTest.cc  LstmTest.h  LstmTestCPU.h  LstmTestGPU.h  lstm_cpu_test.cc  lstm_gpu_test.cu  tile_cpu_test.cc  tile_gpu_test.cu
test/internal/: CMakeLists.txt  rnn2d_inference_impl_test.cc
test/internal/cpu/: CMakeLists.txt  lstm2d_cell_halved_inference.h  lstm2d_cell_standard_inference.h  lstm2d_inference_high_mem_impl_test.cc  lstm2d_standard_cell_inference.h  lstm2d_standard_test.cc  rnn2d_inference_standard_impl_test.cc  rnn2d_simple_cell_test.cc
torch/: CMakeLists.txt  LSTM.lua  README.md  THCGenerateFloatTypes.h  THGenerateFloatTypes.h  binding.cc  binding.h  init.lua  rnn2d-scm-1.rockspec  utils.h
torch/generic/: cpu.cc  cpu.h  gpu.cc  gpu.h  gpu2.cc
torch/rnn2d/: Collapse.lua  LSTM.lua  Tile.lua  ffi.lua  init.lua
torch/test/: CMakeLists.txt  LSTM.lua  README  demo_tiny_ctc.lua  demo_word_ctc.lua  lstm.lua  test_cpu.cc  test_cpu.lua
