## CPU library
ADD_LIBRARY(rnn2d_cpu SHARED lstm_cpu.cc tile_cpu.cc)
TARGET_LINK_LIBRARIES(rnn2d_cpu ${BLAS_LIBRARIES} ${COMMON_LIBRARIES})

## GPU library
IF(CUDA_FOUND AND WITH_CUDA)
  CUDA_ADD_LIBRARY(rnn2d_gpu SHARED lstm_gpu.cu tile_gpu.cu)
  CUDA_ADD_CUBLAS_TO_TARGET(rnn2d_gpu)
  TARGET_LINK_LIBRARIES(rnn2d_gpu ${COMMON_LIBRARIES})
ENDIF()

INSTALL(TARGETS
  rnn2d_cpu rnn2d_gpu
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib)