FIND_PACKAGE(Torch)

IF (TORCH_FOUND AND WITH_TORCH)
  IF (NOT INST_LUADIR)
    SET(INST_LUADIR "${TORCH_LUA_PATH}")
  ENDIF()

  ADD_SUBDIRECTORY(test)
  INSTALL(DIRECTORY rnn2d DESTINATION "${INST_LUADIR}")
  INSTALL(CODE "MESSAGE(\"IMPORTANT: Do not forget to set the LD_LIBRARY_PATH environment variable before using rnn2d!\")")
ENDIF()
